FIX: banner on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -262,14 +262,16 @@
 .banner {
   background-color: #333333;
   position: relative;
-  z-index: -2;
-  padding: 2em 0.5em;
+  padding: 0em 0.5em;
+  padding-top: 8em;
+  padding-bottom: 5em;
 }
 .banner__title {
   color: #FFF;
   font-family: "Old Standard TT", serif;
   font-size: 3.5em;
   font-weight: 400;
+  margin-bottom: 0.5em;
 }
 .banner__text {
   width: 50%;
@@ -277,6 +279,7 @@
   font-family: "Archivo", sans-serif;
   font-size: 0.8em;
   font-weight: 700;
+  margin-bottom: 2em;
 }
 .banner__button {
   display: block;
@@ -287,7 +290,7 @@
   font-family: "Archivo", sans-serif;
   font-size: 0.85em;
   font-weight: 700;
-  background-color: #BEAD8E;
+  background-color: #bead8e;
 }
 .banner__button:not(:last-child) {
   margin-bottom: 2em;
